GenericSetup Product Changelog

  After GenericSetup 1.0

    - Added 'for_' argument to profile registry operations.
      A profile may be registered and queried as appropriate to a specific
      site interface;  the default value, 'None', indicates that the profile
      is relevant to any site.  Note that this is essentially an adapter
      lookup;  perhaps we should reimplement it so.

    - Forward ported changes from GenericSetup 0.11 and 0.12 (which were
      created in a separate repository).

    - Don't export or purge read-only properties. Correctly purge
      non-deletable int/float properties.

    - Correctly quote XML on export.

  GenericSetup 1.0 (2005/09/23)

    - CVS tag:  GenericSetup-1_0

    - Forward-ported i18n support from CMF 1.5 branch.

    - Forward ported BBB for old instances that stored properties as
      lists from CMFSetup.

    - Forward ported fix for tools with non unique IDs from CMFSetup.

  GenericSetup-0.12 (2005/08/29)

    - CVS tag:  GenericSetup-0_12

    - Import requests now create reports (by default) which record any
      status messages generated by the profile's steps.

  GenericSetup-0.11 (2005/08/23)

    - CVS tag:  GenericSetup-0_11

    - Added report of messages generated by import to the "Import" tab.

    - Consolidated ISetupContext implementation into base class,
      'SetupContextBase'.

    - Added 'note', 'listNotes', and 'clearNotes'  methods to ISetupContext,
      to allow plugins to record information about the state of the operation.

  GenericSetup 0.10 (2005/08/11)

    - CVS tag:  GenericSetup-0_10

    - Added TarballImportContext, including full test suite.

  GenericSetup 0.9 (2005/08/08)

    - CVS tag:  GenericSetup-0_9

    - Initial version, cut down from CMFSetup-1.5.3